[tool.poetry]
name = "hc-go-plugin-server"
version = "0.1.1"
description = "Server for HashiCorp's go-plugin (RPCPlugin)"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
readme = "README.md"
homepage = "https://smheidrich.gitlab.io/hc-go-plugin-server-python/"
repository = "https://gitlab.com/smheidrich/hc-go-plugin-server-python"
documentation = "https://smheidrich.gitlab.io/hc-go-plugin-server-python/"
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.0"
grpcio-health-checking = "^1.59.0"
cryptography = "^41.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-parametrization = "^2022.2.1"
black = "^23.7.0"
types-protobuf = "^4.24.0.4"
grpc-stubs = "^1.53.0.3"
unasync = "^0.5.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0,<2"]
build-backend = "poetry.core.masonry.api"
